--- a/package.json
+++ b/package.json
@@ -2,7 +2,18 @@
   "name": "chase",
   "version": "1.0.0",
   "description": "\"npm install express@4.14.0",
-  "main": "web.js",
+  "main": "web.js" ,"dependencies": {
+    "socket.io":"latest",
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.2.0",
+    "ejs": "~2.5.2",
+    "express": "~4.14.0",
+    "morgan": "~1.7.0",
+    "multer": "^1.3.0",
+    "mysql": "^2.13.0",
+    "serve-favicon": "~2.3.0"
+  }
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
